--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -1,3 +1,36 @@
 table {
     width: 100%;
 }
+
+.container {
+    padding: 50px 80px;
+}
+
+.edit-button {
+    background-color: transparent;
+    border: none;
+    color: rgb(88, 247, 88);
+    cursor: pointer;
+
+    :hover {
+        transform: scale(1.2);
+        transition: all 0.5s;
+    }
+
+
+}
+
+
+.delete-button {
+    background-color: transparent;
+    border: none;
+    color: rgb(248, 78, 78);
+    cursor: pointer;
+
+    :hover {
+        transform: scale(1.2);
+        transition: all 0.5s;
+    }
+
+
+}
