--- a/src/app/shared/foter/foter.component.html
+++ b/src/app/shared/foter/foter.component.html
@@ -1,3 +1,3 @@
 <div class="container">
-    <span class="copyright">My crud angulara @2022</span>
+    <span class="copyright">SpaceTree @2022</span>
 </div>
