added new form type of dialog

--- a/src/app/shared/form-dialog/form-dialog.component.html
+++ b/src/app/shared/form-dialog/form-dialog.component.html
@@ -1,20 +1,20 @@
 <h1 mat-dialog-title>Cadastro de elementos</h1>
-<div mat-dialog-content>
+<div mat-dialog-content class="dialog">
     <mat-form-field>
         <mat-label>Position</mat-label>
-        <input matInput [(ngModel)]="data.position">
+        <input color="primary" matInput>
     </mat-form-field>
     <mat-form-field>
         <mat-label>Name</mat-label>
-        <input matInput [(ngModel)]="data.name">
+        <input color="primary" matInput>
     </mat-form-field>
     <mat-form-field>
         <mat-label>Weight</mat-label>
-        <input matInput [(ngModel)]="data.weight">
+        <input color="primary" matInput>
     </mat-form-field>
-    <mat-form-field appearance="outline">
+    <mat-form-field>
         <mat-label>Symbol</mat-label>
-        <input color="" matInput [(ngModel)]="data.symbol">
+        <input color="primary" matInput>
     </mat-form-field>
 </div>
 
