--- a/src/app/shared/form-dialog/form-dialog.component.scss
+++ b/src/app/shared/form-dialog/form-dialog.component.scss
@@ -18,7 +18,7 @@
 }
 
 .submit:hover {
-    background-color: #70fd6b;
+    background-color: #45f53f;
     color: #f3f3f3;
     cursor: pointer;
     transform: scale(1.0);
