--- a/src/app/shared/form-dialog/form-dialog.component.html
+++ b/src/app/shared/form-dialog/form-dialog.component.html
@@ -20,6 +20,6 @@
 
 
 <div class="buttons" mat-dialog-actions>
-    <button class="cancel" (click)="onNoClick()" mat-button mat-dialog-close>Close</button>
+    <button class="cancel" (click)="onCancel()" mat-button mat-dialog-close>Close</button>
     <button class="submit" mat-button [mat-dialog-close]="data">Save</button>
 </div>
