--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -36,7 +36,7 @@
                 <button class="edit-button">
                     <mat-icon>edit</mat-icon>
                 </button>
-                <button class="delete-button">
+                <button class="delete-button" (click)="deleteElement(element.position)">
                     <mat-icon>delete</mat-icon>
                 </button>
             </td>
