added edit function

--- a/src/app/shared/form-dialog/form-dialog.component.html
+++ b/src/app/shared/form-dialog/form-dialog.component.html
@@ -1,4 +1,5 @@
-<h1 mat-dialog-title>Cadastro de elementos</h1>
+<h1 *ngIf="!isChange" mat-dialog-title>Create element</h1>
+<h1 *ngIf="isChange" mat-dialog-title>Edit element</h1>
 <div mat-dialog-content class="dialog">
     <mat-form-field>
         <mat-label>Position</mat-label>
@@ -21,5 +22,7 @@
 
 <div class="buttons" mat-dialog-actions>
     <button class="cancel" (click)="onCancel()" mat-button mat-dialog-close>Close</button>
-    <button class="submit" mat-button [mat-dialog-close]="data">Save</button>
+    <button class="submit" *ngIf="!isChange" mat-button [mat-dialog-close]="data">Save</button>
+    <button class="submit" *ngIf="isChange" mat-button [mat-dialog-close]="data">Edit</button>
+
 </div>
