--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -33,7 +33,7 @@
         <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef> Actions</th>
             <td mat-cell *matCellDef="let element">
-                <button class="edit-button">
+                <button class="edit-button" (click)="editElement(element)">
                     <mat-icon>edit</mat-icon>
                 </button>
                 <button class="delete-button" (click)="deleteElement(element.position)">
